--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,3 @@
-{% case site.color-scheme %}
-  {% when "", nil, false, 0, empty %}
-    {% assign ColorScheme = "auto" %}
-  {% else %}
-    {% assign ColorScheme = site.color-scheme %}
-{% endcase %}
-
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -13,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/colors-ColorScheme.css?v=" | replace: "ColorScheme", ColorScheme | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-
-    <link rel="preload" href="{{site.logo | relative_url}}" as="image">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -24,34 +14,25 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="sidebar">
-        <header>
-          {% if site.logo %}
-            <img class="img-circle" src="{{site.logo | relative_url}}" alt="Logo">
-          {% endif %}
+      <header>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: York University Libraries Carpentries Workshop }}</a></h1>
 
-          {% if site.blank_title %}
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          {% else %}
-            <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-          {% endif %}
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          {% if site.email %}
-            <p class="addr"><i class="fa-regular fa-envelope"></i>&nbsp;{{ site.email }}</p>
-          {% endif %}
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
 
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
-          <h3>Modules</h3>
-          <p><a href="https://yorkulibraries-ds.github.io/carpentries-rr-vc/intro-version-control">Better Version Control via Git and GitHub</a></p>
-          <p><a href="https://yorkulibraries-ds.github.io/carpentries-rr-vc/git-in-github.html">How to use Git in GitHub</a></p>
-          <p><a href="https://yorkulibraries-ds.github.io/carpentries-rr-vc/git-in-rstudio.html">How to use Git in RStudio</a></p>
-          
-          {% include sidebar.html %}
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
 
-        </header>
+      </header>
+      <section>
 
-        {% include links-mobile.html %}
+      {{ content }}
 
+      </section>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
